# security-web-tester

./: .gitignore  README.md  pyproject.toml
.github/workflows/: security-gate.yml
security/: aggregate_report.py  attack_taxonomy.py  config.json  coverage.py  crawler.py  exceptions.yaml  executor.py  report.py  scan.py  scanner.py  test-catalog.json  test-catalog.md  threat-model.md
security/runners/: common.py  run_api_fuzz.py  run_dast.py  run_sast.py  run_sca.py
tests/security/: test_aggregate_report.py  test_cli_framework.py  test_coverage.py
