[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-web-tester"
version = "0.2.0"
description = "Python CLI website security scanner framework"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
